--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==0.9.6
 appnope==0.1.0
 asn1crypto==0.23.0
 attrs==17.3.0
@@ -13,8 +14,11 @@ idna==2.6
 incremental==17.5.0
 ipython==6.2.1
 ipython-genutils==0.2.0
+isort==4.2.15
 jedi==0.11.0
 lxml==4.1.1
+Mako==1.0.7
+MarkupSafe==1.0
 numpy==1.13.3
 pandas==0.21.0
 parsel==1.2.0
@@ -32,6 +36,7 @@ PyDispatcher==2.0.5
 Pygments==2.2.0
 pyOpenSSL==17.5.0
 python-dateutil==2.6.1
+python-editor==1.0.3
 pytz==2017.3
 queuelib==1.4.2
 Scrapy==1.4.0
