Update ini file

--- a/alembic.ini
+++ b/alembic.ini
@@ -35,7 +35,7 @@ script_location = fake_food_alembic
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = driver://user:pass@localhost/dbname
+sqlalchemy.url = postgres://fake_foodie:fake_food@localhost:5432/fake_foods
 
 
 # Logging configuration
