--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ attrs==17.3.0
 Automat==0.6.0
 autopep8==1.3.3
 cffi==1.11.2
+click==6.7
 constantly==15.1.0
 cryptography==2.1.4
 cssselect==1.0.1
@@ -36,6 +37,7 @@ PyDispatcher==2.0.5
 Pygments==2.2.0
 pyOpenSSL==17.5.0
 python-dateutil==2.6.1
+python-dotenv==0.7.1
 python-editor==1.0.3
 pytz==2017.3
 queuelib==1.4.2
